--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
             </thead>
             <tbody>
                 <tr>
-                    <td contenteditable="true">Math</td>
-                    <td contenteditable="true">5</td>
-                    <td contenteditable="true">3</td>
-                    <td contenteditable="true">7</td>
+                    <td contenteditable="true"></td>
+                    <td contenteditable="true"></td>
+                    <td contenteditable="true"></td>
+                    <td contenteditable="true"></td>
                 </tr>
                 <tr>
-                    <td contenteditable="true">Science</td>
-                    <td contenteditable="true">7</td>
-                    <td contenteditable="true">4</td>
-                    <td contenteditable="true">6</td>
+                    <td contenteditable="true"></td>
+                    <td contenteditable="true"></td>
+                    <td contenteditable="true"></td>
+                    <td contenteditable="true"></td>
                 </tr>
             </tbody>
         </table>
